--- a/package.json
+++ b/package.json
@@ -8,11 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.1",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.10.2",
+    "@react-navigation/material-bottom-tabs": "^5.3.2",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native": "0.63.3",
+    "react-native-async-storage": "0.0.1",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-image-crop-picker": "^0.35.1",
+    "react-native-paper": "^4.3.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
