--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
+    "expo-image-picker": "~9.1.0",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,6 +29,7 @@
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-image-crop-picker": "^0.35.1",
+    "react-native-image-picker": "^2.3.4",
     "react-native-paper": "^4.3.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
